# games101_homework

./: .gitignore  LICENSE  README.md
pa0/: main.cpp
pa0/.cache/clangd/index/: main.cpp.79534C754295ADB4.idx
pa1/: CMakeLists.txt  main.cpp
pa1/.cache/clangd/index/: Triangle.cpp.D088E27CBC8994DB.idx  Triangle.hpp.9C189A3F0145BD7B.idx  main.cpp.BAB875C309FF42D6.idx  rasterizer.cpp.62933AA10EFB8AFF.idx  rasterizer.hpp.E0AB3BA3C04EA93D.idx
pa2/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
pa2/.cache/clangd/index/: Triangle.cpp.991AE577D04FF1DC.idx  Triangle.hpp.CBDC966B5BA2D947.idx  global.hpp.F559CE7A20C95C47.idx  main.cpp.861CE21F617914C5.idx  rasterizer.cpp.FBA324AB12E03AC9.idx  rasterizer.hpp.1C9FE2E1DFE4EE70.idx
pa3/: Shader.hpp  main.cpp  rasterizer.cpp
pa3/.cache/clangd/index/: OBJ_Loader.h.986EDAE4D046DCAF.idx  Shader.hpp.464133DBE7F641AF.idx  Texture.cpp.54AD09992C49434B.idx  Texture.hpp.CCC3A17463C5682B.idx  (+6 more)
pa4/: CMakeLists.txt  main.cpp
pa5/: Renderer.cpp  Triangle.hpp
pa5/images/: binary.ppm
pa6/Assignment6/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Triangle.hpp  main.cpp
pa7/Assignment7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Scene.cpp  Triangle.hpp  main.cpp
pa8/src/: application.cpp  rope.cpp
pa9_final_homework/: CMakeLists.txt  OBJ_Loader.hpp  arealight.cuh  bounds.cuh  buildfile  bvh.cu  bvh.cuh  global.cu  global.cuh  intersection.cuh  light.cuh  main.cu  material.cuh  object.cuh  ray.cuh  render.cu  render.cuh  scene.cu  scene.cuh  sphere.cuh  triangle.cu  triangle.cuh  vector.cuh
(+11 files in other folders)
